# pycontg25

./: .gitignore  README.md  app.py  datas.py  email_template.py  email_templates.py  main.py  models.py  pyproject.toml  requirements.txt  schedule.json  schedule.py  schedule_backup.json  send_email.py  send_mail.py  test.py  test_schedule.py  ticket.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
static/css/: schedule.css  style.css
static/images/: message.txt  ticket_PYT2025-ID123456
static/js/: coming-soon.js  home.js  register.js  schedule.js
templates/: 2026_coming_soon.html  400.html  403.html  404.html  422.html  500.html  503.html  about.html  base.html  call_to_action_close.html  coming-soon.html  feedback.html  home.html  livestreaming.html  register.html  registration_closed.html  schedule.html  shop.html  speaker.html  speakers.html  sponsors.html  staff_feedback.html  talents.html  team.html
