[project]
name = "pycontg25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "flask>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "pycountry>=24.6.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "starlette>=0.46.2",
    "supabase>=2.16.0",
    "uvicorn>=0.35.0",
]
